--- a/readme.textile
+++ b/readme.textile
@@ -1,6 +1,6 @@
 h1. Redmine Status Updates
 
-This is a plugin for Redmine:"http://www.redmine.org" that allows users to create small status updates about what they're currently working on.  You can think of it as "Twitter":http://www.twitter.com on a per-project basis, within redmine.
+This is a plugin for "Redmine":http://www.redmine.org that allows users to create small status updates about what they're currently working on.  You can think of it as "Twitter":http://www.twitter.com on a per-project basis, within Redmine.
 
 h2. Installing
 
