--- a/lang/en.yml
+++ b/lang/en.yml
@@ -8,4 +8,7 @@ redmine_status_notification_preference: Notification Preference
 redmine_status_saved_notification_preference: Preference saved as %s.
 redmine_status_failed_to_save_notification_preference: Could not save your preference.  Please try again.
 redmine_status_new_update: posted a new status update
-redmine_status_new_update_plurl: 'Here are the recent status updates for you since'
+redmine_status_new_update_plural: 'Here are the recent status updates for you since'
+redmine_status_all_status_plural: "All statuses"
+redmine_status_tag_cloud: Tag Cloud
+redmine_status_search_statuses: Search statuses
